--- a/apps/legacy/src/app/views/pages/handbook/page/Armour.hbs
+++ b/apps/legacy/src/app/views/pages/handbook/page/Armour.hbs
@@ -1,7 +1,5 @@
 <div class="container pt-3">
-    <figure>
-        <img src="/wiki/images/BFT_F1.png" title="BFT_F1.png" width="100" alt="BFT_F1.png" style="background-color: black" /><figcaption aria-hidden="true">BFT_F1.png</figcaption>
-    </figure>
+    <img class="float-end element-icon" src="/wiki/images/BFT_F1.png" title="BFT_F1.png" alt="BFT_F1.png">
     <h2 id="introduction">Introduction</h2>
     <p>The purpose of an armoured unit is to support an infantry platoon. Unlike some might think, armoured units are not invulnerable.</p>
     <ul>
