--- a/apps/legacy/src/app/views/pages/handbook/page/Basic_Infantry_Skills.hbs
+++ b/apps/legacy/src/app/views/pages/handbook/page/Basic_Infantry_Skills.hbs
@@ -200,11 +200,11 @@
     <h3 id="rangefinder">Rangefinder</h3>
     <p>Rangefinder are tools to measure a distance. We mainly use the Vector 21. It allows you to get the distance [R] and azimuth [Tab] of your target. It takes the slot of the binoculars. Alternatively Laser designators work as well.</p>
     <figure>
-        <img src="/wiki/images/Vector21.png" title="Vector21.png" width="250" alt="Vector21.png" />
+        <img src="/wiki/images/Vector21.png" title="Vector21.png" width="250" alt="Vector21.png">
     </figure>
     <p>In addition you can find the horizontal distance to a target and the height difference between your location and the target by first tapping [R] followed by hold [R]. Furthermore, you can also get the distance and direction between two point. Therefor you press and hold [R]. Once the circle appears press [Tab] and keep holding [R]. Once the P-1 info appears aim at your second point and release [R]. More functions can be found in the official <a href="https://ace3.acemod.org/wiki/feature/vector.html">ACE3 Wiki</a>.</p>
     <figure>
-        <img src="/wiki/images/VectorDistance.png" title="VectorDistance.png" width="500" alt="VectorDistance.png" style="background-color: black" />
+        <img class="float-end image-transparent-fix" src="/wiki/images/VectorDistance.png" title="VectorDistance.png" width="500" alt="VectorDistance.png">
     </figure>
     <ul>
         <li><span style="color:#087b08"> <strong>Direct Distance</strong> </span> - Used to zero weapons onto targets.</li>
@@ -225,7 +225,7 @@
         <li><span style="color:#087b08"> <strong>Squad mate radar</strong> </span> - Frequently check the radar at the bottom of your screen displaying the location of squad mates around you</li>
     </ul>
     <figure>
-        <img src="/wiki/images/ShactacRadar.png" title="ShactacRadar.png" width="300" alt="ShactacRadar.png" />
+        <img src="/wiki/images/ShactacRadar.png" title="ShactacRadar.png" width="300" alt="ShactacRadar.png">
     </figure>
     <p>Inner circle is 15m, middle circle is 30m and outer circle is 50m.</p>
     <h3 id="identification">Identification</h3>
@@ -419,11 +419,11 @@
     <h4 id="ballistics">Ballistics</h4>
     <p>Understanding bullet trajectory is important when engaging target at ranges. Bullets drop over range. It is important to know the range of your target to adjust your aim.</p>
     <figure>
-        <img src="/wiki/images/Trajectory.png" width="300" style="background-color: black" />
+        <img class="float-end image-transparent-fix" src="/wiki/images/Trajectory.png" width="300">
     </figure>
     <p>Zeroing your weapon, meaning to adjust the weapon sights to a certain range can be helpful. Otherwise, you might have to take the range the weapon is configured on and either aim above or below the target to hit. If your weapon sights allow you can zero them to certain ranges using [Page Up] and [Page Down]. The distance your weapon sight has been configured for you will find on the HUD. Zeroing might be more relevant for longer engagement distances in regard to firearms, although it is extremely important for heavier projectiles with higher drop rate like 40mm grenades or even rockets.</p>
     <figure>
-        <img src="/wiki/images/WeaponRanging1.png" title="WeaponRanging1.png" width="300" alt="WeaponRanging1.png" />
+        <img src="/wiki/images/WeaponRanging1.png" title="WeaponRanging1.png" width="300" alt="WeaponRanging1.png">
     </figure>
     <p>Bullets and other projectiles need to travel to their destination. There are not instantly there. Especially when shooting at moving targets you need to mind the travel time of the bullet, meaning that you need to aim ahead your target in its direction of movement. Tracers might help to track your own fire or the fire of friendlies. If you are paired up with a machine gunner trace his fire but looking at the tracers and call corrections if needed.</p>
     <p>Factors influencing your accuracy:</p>
@@ -441,7 +441,7 @@
         <li><span style="color:#087b08"> <strong>Dry Reload</strong></span> - Reloading an empty magazine. Often especially in CQB it might make more sense to switch to pistol and continue clearing the proximity before reloading.</li>
     </ul>
     <figure>
-        <img src="/wiki/images/WeaponMag1.png" title="WeaponMag1.png" width="300" alt="WeaponMag1.png" />
+        <img src="/wiki/images/WeaponMag1.png" title="WeaponMag1.png" width="300" alt="WeaponMag1.png">
     </figure>
     <p>Keep track of your ammunition. The HUD will only display the amount of magazine you have regardless of them being full or partially empty. You can check the current state of your magazine in your weapon by pressing [L Ctrl] + [R]. It will display a categorized amount of bullets in your magazine. Partial magazine can be repacked, meaning that you will pack all magazines together that you end up with as many full magazine possible out of the amount of bullets you have. Repacking magazine can be done through ACE self interact. You should do this whenever the situation allows. Since it takes a while to do, make sure that you do not start right before the order to move out. You do not own your ammunition. It is belongs to the team same as all your gear share if required.</p>
     <p>You weapon can jam, especially when weapon temperatures rise. You can clear a jam by pressing [L Shift] + [R].</p>
