--- a/apps/legacy/src/app/views/pages/handbook/page/Battle_Drills.hbs
+++ b/apps/legacy/src/app/views/pages/handbook/page/Battle_Drills.hbs
@@ -13,15 +13,11 @@
         <li><span style="color:#087b08"><strong>Last Man</strong></span> - If you are the last man, you should start moving. If you are the last man, and you bypass a covering soldier. You call "last man" to let him know that he is the last man of the Squad.</li>
         <li><span style="color:#087b08"><strong>Spacing</strong></span> - Vertical spacing might not be possible without stopping to move and wait, which is not desired. If vertical spacing is not good, increase horizontal spacing.</li>
     </ul>
-    <figure>
-        <img src="/wiki/images/Spacing.png" title="Spacing.png" width="150" alt="Spacing.png" style="background-color: black" /><figcaption aria-hidden="true">Spacing.png</figcaption>
-    </figure>
+    <img class="float-end image-transparent-fix" src="/wiki/images/Spacing.png" title="Spacing.png" width="150" alt="Spacing.png">
     <ul>
         <li><span style="color:#087b08"><strong>Leap Frog</strong></span> - If you are the last man in the Squad or there are two soldiers in front of you covering, you move forward.</li>
     </ul>
-    <figure>
-        <img src="/wiki/images/MoveAndCover.png" title="MoveAndCover.png" width="300" alt="MoveAndCover.png" style="background-color: black" /><figcaption aria-hidden="true">MoveAndCover.png</figcaption>
-    </figure>
+    <img class="image-transparent-fix" src="/wiki/images/MoveAndCover.png" title="MoveAndCover.png" width="300" alt="MoveAndCover.png">
     <ul>
         <li><span style="color:#087b08"><strong>Regroup</strong></span> - Whenever the situation requires additional coordination or there is a lack of cover ahead - regroup. Quickly communicate on how to proceed.</li>
         <li><span style="color:#087b08"><strong>Crossing Roads</strong></span> - If you are the first on a road, cover for the others to cross.</li>
@@ -41,6 +37,7 @@
         <li><span style="color:#087b08"><strong>Determine and Report</strong></span> - The location of the enemy engaging should now be determined and reported to all. It will be the foundation of following decisions.</li>
     </ul>
     <p>Now it is on the Squad Leader to decide what to do. There are multiple options.</p>
+    <img class="image-transparent-fix float-end" src="/wiki/images/SuppressiveFireGraph.png" title="SuppressiveFireGraph.png" width="250" alt="SuppressiveFireGraph.png">
     <ul>
         <li><span style="color:#087b08"><strong>Suppressive Fire</strong></span> - Gain fire superiority and force the enemies into cover.
             <ul>
@@ -48,16 +45,11 @@
                 <li>Talking Guns - Ensure a constant volume of fire towards the enemy. Shoot in short burst and try to fill the gaps in gunfire. If teammates are reloading you speed up the frequency of your burst to ensure a constant and ongoing fire.</li>
             </ul></li>
     </ul>
-    <figure>
-        <img src="/wiki/images/SuppressiveFireGraph.png" title="SuppressiveFireGraph.png" width="200" alt="SuppressiveFireGraph.png" style="background-color: black" /><figcaption aria-hidden="true">SuppressiveFireGraph.png</figcaption>
-    </figure>
     <ul>
         <li><span style="color:#087b08"><strong>Push</strong></span> - The decision can be to either push the enemy directly or push into a better position.</li>
         <li><span style="color:#087b08"><strong>Flank</strong></span> - Either your team or another team might be sent to flank the enemy. This requires other elements maintaining suppressive fire.</li>
     </ul>
-    <figure>
-        <img src="/wiki/images/SuppressiveFire.png" title="SuppressiveFire.png" width="250" alt="SuppressiveFire.png" style="background-color: black"/><figcaption aria-hidden="true">SuppressiveFire.png</figcaption>
-    </figure>
+    <img class="image-transparent-fix float-end" src="/wiki/images/SuppressiveFire.png" title="SuppressiveFire.png" width="250" alt="SuppressiveFire.png">
     <ul>
         <li><span style="color:#087b08"><strong>Peel Back</strong></span> - When peeling back one element will always cover and suppress while others are falling back to take over and cover for the team in front, to leap frog back. It is a reverse move and cover. The goal is to keep suppressing the enemy while falling and back and ultimately disengage.</li>
     </ul>
@@ -79,15 +71,11 @@
     <ul>
         <li><span style="color:#087b08"><strong>Linear Ambush</strong></span> - All elements are forming a single line facing the enemy. Especially used for hasty assembled ambushes.</li>
     </ul>
-    <figure>
-        <img src="/wiki/images/LinAmbush.png" title="LinAmbush.png" width="200" alt="LinAmbush.png" style="background-color: black" /><figcaption aria-hidden="true">LinAmbush.png</figcaption>
-    </figure>
+    <img class="image-transparent-fix" src="/wiki/images/LinAmbush.png" title="LinAmbush.png" width="200" alt="LinAmbush.png">
     <ul>
         <li><span style="color:#087b08"><strong>L-Shape Ambush</strong></span> - An ambush from two sides. Both lines are forming the shape of an L. Usually one element is position at the front of the enemy in order to block them and the other element is in their flank. Both elements create a huge crossfire while staying out of each others fire lines.</li>
     </ul>
-    <figure>
-        <img src="/wiki/images/L-Shape.png" title="L-Shape.png" width="250" alt="L-Shape.png" style="background-color: black" /><figcaption aria-hidden="true">L-Shape.png</figcaption>
-    </figure>
+    <img class="image-transparent-fix" src="/wiki/images/L-Shape.png" title="L-Shape.png" width="250" alt="L-Shape.png">
     <h2 id="close_quarter_battle">Close Quarter Battle</h2>
     <p>Fighting in close quarters requires a high level of team work and coordination. Without a surgical and methodical approach it can easily end in a disaster. There are some ground rules to follow at all times:</p>
     <ul>
@@ -101,19 +89,15 @@
             </ul></li>
         <li><span style="color:#087b08"><strong>Pieing</strong></span> - Before moving in try to peek into the area to systematically eliminate potential enemy locations while keeping exposure to a minimum.</li>
     </ul>
-    <figure>
-        <img src="/wiki/images/Pieing.png" title="Pieing.png" width="300" alt="Pieing.png" style="background-color: black" /><figcaption aria-hidden="true">Pieing.png</figcaption>
-    </figure>
+    <img class="image-transparent-fix" src="/wiki/images/Pieing.png" title="Pieing.png" width="300" alt="Pieing.png">
     <ul>
         <li><span style="color:#087b08"><strong>Cover each other</strong></span> - Always cover each other. If the person in front is entering a room to the right, you take the left.</li>
         <li><span style="color:#087b08"><strong>Movement</strong></span> - Always move along a wall and avoid moving in another persons firing line or sector. Slow is smooth and smooth is fast. Moving smooth and at the right speed is important to ensure a precise clearing.</li>
         <li><span style="color:#087b08"><strong>Sector by sector</strong></span> - Proper procedure is required by each room you are clearing.</li>
     </ul>
-    <figure>
-        <img src="/wiki/images/Entering3.png" title="Entering3.png" width="600" alt="Entering3.png" style="background-color: black" /><figcaption aria-hidden="true">Entering3.png</figcaption>
-    </figure>
+    <img class="image-transparent-fix" src="/wiki/images/Entering3.png" title="Entering3.png" width="600" alt="Entering3.png">
     <p>More examples:</p>
-    <p><img src="/wiki/images/Entering1.png" title="Entering1.png" width="500" alt="Entering1.png" style="background-color: black" /> <img src="/wiki/images/Entering2.png" title="Entering2.png" width="500" alt="Entering2.png" style="background-color: black" /></p>
+    <p><img class="image-transparent-fix" src="/wiki/images/Entering1.png" title="Entering1.png" width="500" alt="Entering1.png"> <img class="image-transparent-fix" src="/wiki/images/Entering2.png" title="Entering2.png" width="500" alt="Entering2.png"></p>
     <h2 id="air_transport">Air Transport</h2>
     <p>There are some general procedures and guidelines to follow when it comes to using Air Transport.</p>
     <h3 id="helicopters">Helicopters</h3>
