--- a/apps/legacy/src/app/views/pages/handbook/page/Echo_Platoon_Support.hbs
+++ b/apps/legacy/src/app/views/pages/handbook/page/Echo_Platoon_Support.hbs
@@ -1,5 +1,5 @@
 <div class="container pt-3">
-    <p><img src="/wiki/images/BFT_E1.png" title="BFT_E1.png" width="100" alt="BFT_E1.png" style="background-color: black" /> <img src="/wiki/images/Echo_2.png" title="Echo_2.png" width="250" alt="Echo_2.png" /></p>
+    <p><img class="float-end element-icon" src="/wiki/images/BFT_E1.png" title="BFT_E1.png" alt="BFT_E1.png"></p>
     <h2 id="introduction">Introduction</h2>
     <p>Echo is embedded in the Main Platoon. Their main tasks include covering regular elements, protect flanks and provide effective fire support.</p>
     <h2 id="composition">Composition</h2>
@@ -30,6 +30,7 @@
                 <li>Provides protection</li>
             </ul></li>
     </ul>
+    <img class="float-end" src="/wiki/images/Echo_2.png" title="Echo_2.png" width="250" alt="Echo_2.png">
     <h2 id="combat_engineer_proficiency">Combat Engineer Proficiency</h2>
     <h3 id="engineer_skills">Engineer Skills</h3>
     <p>Skills a Combat Engineer needs to be able to bring onto the battlefield.</p>
@@ -184,7 +185,5 @@
     <ul>
         <li><span style="color:#087b08"><strong>Holding Vehicle</strong></span> - Hold the vehicle angled in the center of the road. That provides a lot of cover, assuming the contact is coming from the front. It should be angled to provide a maximum of cover, while being able to move forward or go in reverse without switching between them.</li>
     </ul>
-    <figure>
-        <img src="/wiki/images/HMMWV.png" title="HMMWV.png" width="150" alt="HMMWV.png" style="background-color: black" /><figcaption aria-hidden="true">HMMWV.png</figcaption>
-    </figure>
+    <img class="image-transparent-fix" src="/wiki/images/HMMWV.png" title="HMMWV.png" width="150" alt="HMMWV.png">
 </div>
