--- a/apps/legacy/src/app/views/pages/handbook/page/Fixed_Wing.hbs
+++ b/apps/legacy/src/app/views/pages/handbook/page/Fixed_Wing.hbs
@@ -1,7 +1,5 @@
 <div class="container pt-3">
-    <figure>
-        <img src="/wiki/images/BFT_W1.png" title="BFT_W1.png" width="100" alt="BFT_W1.png" style="background-color: black" /><figcaption aria-hidden="true">BFT_W1.png</figcaption>
-    </figure>
+    <img class="float-end element-icon" src="/wiki/images/BFT_W1.png" title="BFT_W1.png" alt="BFT_W1.png">
     <h2 id="before_joining_your_first_training">Before joining your first training</h2>
     <p>If you want to enroll in the fixed wing program you will first need to have passed your infantry qualification. Training on your own is highly encouraged and needed, as this program will only serve as a guide and can't be substituted for practical experience. Flying a jet is anything but easy or relaxing. As a pilot you must be vigilant and constantly keep an eye on your altitude, speed and direction of flight. You will be responsible for accurate and safe deployment of ordnance. The requirements for the pilot qualification are listen <a href="/handbook/Qualifications">here</a>.</p>
     <p>Certifications for pilots take place on a scheduled date, once you and the instructor feel confident in your ability to pass. In order to take the qualification exam you must attend at least one training session.</p>
