--- a/apps/legacy/src/app/views/pages/handbook/page/Reconnaissance.hbs
+++ b/apps/legacy/src/app/views/pages/handbook/page/Reconnaissance.hbs
@@ -1,11 +1,12 @@
 <div class="container pt-3">
-    <p><img src="/wiki/images/BFT_S1.png" title="BFT_S1.png" width="100" alt="BFT_S1.png" style="background-color: black" /> <img src="/wiki/images/ReconTeam.png" title="ReconTeam.png" width="250" alt="ReconTeam.png" /></p>
+    <p><img class="float-end element-icon" src="/wiki/images/BFT_S1.png" title="BFT_S1.png" alt="BFT_S1.png"></p>
     <h2 id="reconnaissance_team">Reconnaissance Team</h2>
     <ul>
         <li><span style="color:#087b08"><strong>Recon Spotter</strong></span> - Leader of the Recon Team and spotter for the Sniper. Equipped with a long-range Radio and responsible for the communication with other Elements.</li>
         <li><span style="color:#087b08"><strong>Recon Sniper</strong></span> - Marksman of the Recon Team equipped with a long-range precision rifle.</li>
         <li><span style="color:#087b08"><strong>Other Recon Roles</strong></span> - In some cases the Recon Team may get expanded and additional team members will be added to perform other roles.</li>
     </ul>
+    <img class="float-end" src="/wiki/images/ReconTeam.png" title="ReconTeam.png" width="250" alt="ReconTeam.png">
     <h2 id="tasks_responsibilities">Tasks &amp; Responsibilities</h2>
     <ul>
         <li><span style="color:#087b08"><strong>Reconnaissance</strong></span> - The Recon Team usually is operating ahead of the other ground teams. Gathering as much intel about enemy position and movements as possible prior to the arrival of the main ground force. Infiltrating behind enemy lines. They are the eyes and ears of the ground command based on which decisions are made.</li>
