--- a/apps/legacy/src/app/views/pages/handbook/page/Rotary_Aviation.hbs
+++ b/apps/legacy/src/app/views/pages/handbook/page/Rotary_Aviation.hbs
@@ -1,5 +1,5 @@
 <div class="container pt-3">
-    <p><img src="/wiki/images/BFT_R1.png" title="BFT_R1.png" width="100" alt="BFT_R1.png" style="background-color: black" /> <img src="/wiki/images/AviationTeam.png" title="AviationTeam.png" width="250" alt="AviationTeam.png" /></p>
+    <p><img class="float-end element-icon" src="/wiki/images/BFT_R1.png" title="BFT_R1.png" alt="BFT_R1.png"></p>
     <p>This page is intended as a supplement to the Rotary Wing Training. It will not work as a replacement for live training sessions.</p>
     <h2 id="before_joining_your_first_training_session">Before joining your first training session</h2>
     <h3 id="for_copilots_and_pilots">For Copilots and Pilots</h3>
@@ -14,6 +14,7 @@
     <p>Learning how to fly helicopters is not easy. When flying in an operation you are responsible for the lives of your passengers. Flying in a dangerous way to impress passengers or due to lacking skill might cause the helicopter to crash and delay the operation for up to twenty minutes while everyone is respawning end setting up again. Deploying a helicopter's weapon systems in an unsafe, not-communicated manner is similarly dangerous to ground units. This is why we require helicopter pilots to make their licence before being allowed a seat in the cockpit.</p>
     <p>Please remember that learning how to fly requires a significant investment of time from your side, and training only during the training sessions will not be sufficient. If you are a new pilot it is expected that you invest at least one additional hour each week into training on your own. If you can not make this kind of time investment you will probably not be able to learn how to fly and the training instructor and you yourself will just be wasting everyone's time.</p>
     <p>Certifications for Pilots are conducted on a 1-on-1 basis and will be scheduled once both you and the instructor feel that you are likely to pass.</p>
+    <img class="float-end" src="/wiki/images/AviationTeam.png" title="AviationTeam.png" width="250" alt="AviationTeam.png" />
     <h2 id="helicopter_crew">Helicopter Crew</h2>
     <p>Depending on the Helicopter and the Pilot the crew consists of up to two people.</p>
     <ul>
