--- a/apps/legacy/src/app/views/pages/handbook/page/Structure.hbs
+++ b/apps/legacy/src/app/views/pages/handbook/page/Structure.hbs
@@ -12,13 +12,13 @@
     <h1>Platoon</h1>
     <p>The platoon is the entity organising all other elements on the battlefield. It is the centerpiece of all our deployed units. This makes the platoon leader in charge of the entire operation.</p>
 
+    <img class="float-end image-transparent-fix" src="wiki/images/PL_Struc2.png" alt="Platoon Structure">
     <h2>Structure</h2>
     <ul>
         <li><strong style="color:#087b08">Platoon Element</strong> - Leadership and supportive element of the platoon, generally operating in a second line behind the frontline.</li>
         <li><strong style="color:#087b08">Squad Elements</strong> - A platoon consists out of up to three squads (Alpha, Bravo & Charlie). Squads are generally the frontline elements and the main element of our platoon.</li>
         <li><strong style="color:#087b08">Support Elements</strong> - There are various possible support elements such as combat engineers, weapons teams, reconnaissance teams, mechanized or armoured teams. Support elements have generally more freedom and are under less strict control of the platoon leadership. Their main task is to support the squad elements and help them succeed with their tasks. Their freedom enables them to apply their special abilities to their fullest potential.</li>
     </ul>
-    <img src="wiki/images/PL_Struc2.png" alt="Platoon Structure" style="width: 250px;background-color: black">
 
     <h2>Platoon Element Roles</h2>
     <ul>
@@ -53,7 +53,7 @@
         <li><strong style="color:#087b08">Sector Security</strong> - Ensure a 360° Security at all time. All Sectors must be covered.</li>
         <li><strong style="color:#087b08">2nd in Command</strong> - The 2IC is responsible to enforce the order given by the Squad Leader and ensure their timely and proper execution.</li>
     </ul>
-    <img src="wiki/images/Untitled+drawing.png" alt="Platoon Structure" style="width: 750px;background-color: black">
+    <img class="image-transparent-fix" src="wiki/images/Untitled+drawing.png" alt="Platoon Structure">
 
     <hr>
     <h1>Fire Team</h1>
