--- a/apps/legacy/src/app/views/pages/handbook/page/Tactics_Leadership.hbs
+++ b/apps/legacy/src/app/views/pages/handbook/page/Tactics_Leadership.hbs
@@ -24,27 +24,27 @@
         </tr>
         <tr class="even">
             <td><figure>
-                <img src="/wiki/images/Wedge.png" title="Wedge.png" width="200" alt="Wedge.png" style="background-color: black" /><figcaption aria-hidden="true">Wedge.png</figcaption>
+                <img class="image-transparent-fix" src="/wiki/images/Wedge.png" title="Wedge.png" width="200" alt="Wedge.png">
             </figure></td>
             <td><figure>
-                <img src="/wiki/images/Line.png" title="Line.png" width="200" alt="Line.png" style="background-color: black" /><figcaption aria-hidden="true">Line.png</figcaption>
+                <img class="image-transparent-fix" src="/wiki/images/Line.png" title="Line.png" width="200" alt="Line.png">
             </figure></td>
             <td><figure>
-                <img src="/wiki/images/Column.png" title="Column.png" width="200" alt="Column.png" style="background-color: black" /><figcaption aria-hidden="true">Column.png</figcaption>
+                <img class="image-transparent-fix" src="/wiki/images/Column.png" title="Column.png" width="200" alt="Column.png">
             </figure></td>
             <td><figure>
-                <img src="/wiki/images/StaggeredColumn.png" title="ColumnStaggered.png" height="200" alt="ColumnStaggered.png" style="background-color: black" /><figcaption aria-hidden="true">ColumnStaggered.png</figcaption>
+                <img class="image-transparent-fix" src="/wiki/images/StaggeredColumn.png" title="ColumnStaggered.png" height="200" alt="ColumnStaggered.png">
             </figure></td>
             <td><figure>
-                <img src="/wiki/images/Diamond.png" title="Diamond.png" width="200" alt="Diamond.png" style="background-color: black" /><figcaption aria-hidden="true">Diamond.png</figcaption>
+                <img class="image-transparent-fix" src="/wiki/images/Diamond.png" title="Diamond.png" width="200" alt="Diamond.png">
             </figure></td>
         </tr>
         <tr class="odd">
-            <td><p>default combat area formation</p></td>
-            <td><p>attack formation, on contact form a line towards the enemy</p></td>
-            <td><p>travelling formation or used in areas with mines</p></td>
-            <td><p>travelling formation</p></td>
-            <td><p>combat area or close quarters with expected attack from the rear</p></td>
+            <td><p>Default combat area formation.</p></td>
+            <td><p>Attack formation, on contact form a line towards the enemy.</p></td>
+            <td><p>Travelling formation or used in areas with mines.</p></td>
+            <td><p>Travelling formation or used when patrolling on roads.</p></td>
+            <td><p>Combat area or close quarters with expected attack from the rear.</p></td>
         </tr>
         </tbody>
     </table>
@@ -57,18 +57,14 @@
     <ul>
         <li><span style="color:#087b08"><strong>Travelling Overwatch</strong></span> - Extent of travelling. While the lead element is continuously moving the trail element is moving at various speeds and may halt to provide overwatch. Spacing is defined by the ability of the trail element to provide suppressive fire for the lead element if needed. Use when speed is important, but with more added security.</li>
     </ul>
+    <img class="float-end image-transparent-fix my-0" src="/wiki/images/SuccBouding.png" title="SuccBouding.png" width="250" alt="SuccBouding.png">
     <ul>
         <li><span style="color:#087b08"><strong>Successive Bounding</strong></span> - The lead element advances while the trail element covers from an overwatch position. The lead element halts and assumes a forward overwatch position. When the lead element is set, the trail element advances to an overwatch position abreast from the lead element. Once the trail element is in position the procedure repeats. During this movement the trail element avoids moving ahead past the lead element.</li>
     </ul>
-    <figure>
-        <img src="/wiki/images/SuccBouding.png" title="SuccBouding.png" width="250" alt="SuccBouding.png" style="background-color: black" /><figcaption aria-hidden="true">SuccBouding.png</figcaption>
-    </figure>
+    <img class="float-end image-transparent-fix my-0" src="/wiki/images/AltBouding.png" title="AltBouding.png" width="250" alt="AltBouding.png">
     <ul>
         <li><span style="color:#087b08"><strong>Alternate Bounding</strong></span> - Covered by the trail element, the lead element advances and assumes a forward overwatch position. When the lead element is set, the trail element advances past the lead element and assumes an overwatch position ahead of the lead element. Once set, the lead element moves ahead again. Both teams leap frog past each other continuously while one of the is always set to cover and only one of them is moving at a time.</li>
     </ul>
-    <figure>
-        <img src="/wiki/images/AltBouding.png" title="AltBouding.png" width="250" alt="AltBouding.png" style="background-color: black" /><figcaption aria-hidden="true">AltBouding.png</figcaption>
-    </figure>
     <ul>
         <li><span style="color:#087b08"><strong>Breaking Contact</strong></span> - When facing an overwhelming enemy force, being caught in a bad position or momentum needs to be maintained, you might need to break contact in an organized manner. Breaking contact is a reversed alternate bounding. While the trail elements halts and provides suppressive fire, the lead element falls back to an overwatch position and then takes over the suppressive fire in order for the trail element to fall back and leap frog past the lead element.</li>
     </ul>
