--- a/apps/legacy/src/app/views/pages/home.hbs
+++ b/apps/legacy/src/app/views/pages/home.hbs
@@ -1,5 +1,5 @@
 <div class="container-fluid pt-3">
-    <div class="p-5 mb-4 bg-light rounded-3">
+    <div class="p-5 mb-4 bg-body-tertiary rounded-3">
         <div class="container">
             <h1 class="display-4 text-center text-primary">About our Community</h1>
             <p class="lead">7th Ranger Group is an international Arma 3 Milsim community based in Europe, but with
@@ -21,7 +21,7 @@
 </div>
 
 <div class="container-fluid pt-3">
-    <div class="p-5 mb-4 bg-light rounded-3">
+    <div class="p-5 mb-4 bg-body-tertiary rounded-3">
         <div class="container">
             <h1 class="display-4 text-center text-primary">Our Operations</h1>
             <p class="lead text-center">Saturdays at 20:00 CE(S)T</p>
@@ -93,7 +93,7 @@
 </div>
 
 <div class="container-fluid pt-3">
-    <div class="p-5 mb-4 bg-light rounded-3">
+    <div class="p-5 mb-4 bg-body-tertiary rounded-3">
         <div class="container">
             <div class="row">
                 <div class="col-md-5 d-flex justify-content-center flex-column">
@@ -122,7 +122,7 @@
 </div>
 
 <div class="container-fluid pt-3">
-    <div class="p-5 mb-4 bg-light rounded-3">
+    <div class="p-5 mb-4 bg-body-tertiary rounded-3">
         <div class="container">
             <h1 class="display-4 text-center text-primary">Our Resources</h1>
             <p class="lead">The unit has multiple resources at its disposal to ensure smooth operations. These resources
@@ -198,7 +198,7 @@
 </div>
 
 <div class="container-fluid pt-3">
-    <div class="p-5 mb-4 bg-light rounded-3">
+    <div class="p-5 mb-4 bg-body-tertiary rounded-3">
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
@@ -226,7 +226,7 @@
 </div>
 
 <div class="container-fluid pt-3">
-    <div class="p-5 mb-4 bg-light rounded-3">
+    <div class="p-5 mb-4 bg-body-tertiary rounded-3">
         <div class="container text-center">
             <h1 class="display-4 text-primary text-center">How to Join</h1>
             <p class="lead text-center">We are always looking for friendly, mature and respectful players. If you want
@@ -246,7 +246,7 @@
 </div>
 
 <div class="container-fluid pt-3">
-    <div class="p-5 mb-4 bg-light rounded-3">
+    <div class="p-5 mb-4 bg-body-tertiary rounded-3">
         <div class="container">
             <h1 class="display-4 text-center text-primary">Would you like to know more?</h1>
             <p class="lead text-center">Feel free to drop by on our Discord or Teamspeak (ts.7th-ranger.com) if you have
